data -> data.js
Signed-off-by: Rubért Granadinger <rubocop@ruberts-mbp.br-edv.brnet.int>

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 		</ul>
 	</nav>
 	<div id="map"></div>
-	<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8yjrGm9orQz4BMjuB1Gkn9cd5rLQS6Fs&v=3&callback=initMap"></script> -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8yjrGm9orQz4BMjuB1Gkn9cd5rLQS6Fs&v=3"></script>
+	<script type="text/javascript" src="dev.main.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8yjrGm9orQz4BMjuB1Gkn9cd5rLQS6Fs&v=3&callback=initMap"></script>
 </body>
 </html>
